# ponix

./: .gitignore  .mise.docker.toml  .mise.toml  CLAUDE.md  Cargo.toml  README.md  Tiltfile  docker-compose.yaml  go.mod  go.sum  justfile  magefile.go  otel.docker-compose.yaml  sqlc.yaml
.cloudflared/: cloudflared-config.yaml
.influxdb/: telegraf.conf
.thoughts/plans/: 2025-11-04-issue-6-http-end-device-integration.md  IMPLEMENTATION_PLAN_SENSOR_QUERY.md
cmd/management-service/: Dockerfile  main.go
cmd/ponix-all-in-one/: Dockerfile  main.go
docker/: docker-compose.deps.yaml  docker-compose.service.yaml
integration/management-service/: system_integration_test.go
internal/auth/: client.go  end_device.go  enforcer.go  oauth.go  organization.go  organization_user.go  super_admin.go  user.go
internal/casbin/: end_device.go  enforcer.go  lorawan.go  organization.go  organization_user.go  super_admin.go  user.go
internal/clickhouse/: db.go  envelope.go  migrate.go  time_bucket.go
internal/conf/: all_in_one.go  env_var.go  get.go  ingestion.go  management.go
internal/connectrpc/: end_device.go  end_device_data.go  gateway.go  ingestion.go  interceptors.go  lorawan.go  network_server.go  organization.go  organization_user.go  system.go  system_input.go  user.go
libs/telemetry/: Cargo.toml
libs/telemetry/examples/: guage.rs
libs/telemetry/src/: lib.rs  metrics.rs  providers.rs
schema/: end_device.sql  gateway.sql  lorawan.sql  network_server.sql  organization.sql  query.sql  schema.sql  system.sql  system_input.sql  user.sql  user_organizations.sql
(+80 files in other folders)
